test/libsolidity/syntaxTests/nameAndTypeResolution/339_rational_bitor_binary_operation.sol
contract test {
    function f() public {
        fixed(1.5) | 3;
    }
}
// ----
// UnimplementedFeatureError: Not yet implemented - FixedPointType.
